# pkg-builder

./: .gitignore  Cargo.toml  EXAMPLES.md  INSTALL.md  License  Packaging.md  Readme.md  rustfmt.toml
.github/actions/run-packaging-tests/: action.yml
.github/actions/setup-packaging-env/: action.yml
.github/actions/setup-sbuild/: action.yml
.github/workflows/: dependency.yaml  tests.yml
bin_dependencies/: .crates2.json  debcrafter_2711b53  debcrafter_8189263
docs/: config.md  packaging.md
examples/bookworm/c/hello-world/: hello-world.changelog  hello-world.sps  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/csharp/hello-world/: pkg-builder.toml
examples/bookworm/dotnet/hello-world/: hello-world-dotnet.changelog  hello-world-dotnet.sps  hello-world.sss  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/git-package/nimbus/: hello-world.sps  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/go/hello-world/: hello-world-go.sps  hello-world-go.sss  hello-world.sss  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/java-gradle/hello-world/: pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/java/hello-world/: hello-world-java.changelog  hello-world.sss  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/java/hello-world-gradle/: hello-world-java-gradle.changelog  hello-world-java-gradle.sps  hello-world-java-gradle.sss  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/javascript/hello-world/: hello-world-javascript.changelog  hello-world-javascript.sss  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/nim/hello-world/: hello-world-nim.sps  hello-world.sss  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/python/hello-world/: hello-world-python.changelog  hello-world-python.sps  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/rust/hello-world/: hello-world-rust.sps  hello-world.sss  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/typescript/hello-world/: hello-world-typescript.changelog  hello-world-typescript.sps  pkg-builder-verify.toml  pkg-builder.toml
examples/bookworm/virtual-package/: pkg-builder-verify.toml  pkg-builder.toml  test-virtual-package.changelog  test-virtual-package.sps  test-virtual-package.sss
examples/bookworm/virtual/hello-world/: pkg-builder-verify.toml  pkg-builder.toml  test-virtual-package.sps
examples/bookworm/zig/hello-world/: pkg-builder.toml
examples/jammy/c/hello-world/: hello-world.changelog  pkg-builder-verify.toml  pkg-builder.toml
examples/jammy/dotnet/hello-world/: hello-world-dotnet.changelog  hello-world-dotnet.sss  pkg-builder-verify.toml  pkg-builder.toml
examples/jammy/git-package/nimbus/: pkg-builder.toml
examples/jammy/go/hello-world/: hello-world-go.changelog  pkg-builder-verify.toml  pkg-builder.toml
examples/jammy/java-gradle/hello-world/: hello-world-java-gradle.changelog  pkg-builder-verify.toml  pkg-builder.toml
examples/jammy/java/hello-world/: hello-world-java.changelog  pkg-builder-verify.toml  pkg-builder.toml
examples/jammy/javascript/hello-world/: hello-world-javascript.changelog  hello-world-javascript.sps  pkg-builder-verify.toml  pkg-builder.toml
examples/jammy/nim/hello-world/: hello-world-nim.changelog  pkg-builder-verify.toml  pkg-builder.toml
examples/jammy/python/hello-world/: hello-world-python.changelog  pkg-builder.toml
overrides/: .sbuildrc  .sbuildrc-github
script/: preseed.cfg  qemu-setup.sh
src/: dependencies.toml  lib.rs  main.rs
src/v1/: args.rs  cli.rs  cli_config.rs  debcrafter_helper.rs  mod.rs  packager.rs  pkg_config.rs  pkg_config_verify.rs
src/v1/distribution/: mod.rs
src/v1_build/: cli.rs  config.rs  debcrafter_helper.rs  mod.rs  package_build.rs  packager.rs  prepare_build.rs  sbuild.rs
src/v1_build/distribution/: bookworm.rs  mod.rs  packager.rs
tests/: bookworm.rs  bookworm_tests.rs  rust_package.rs  sbuild.rs
tests/bookworm/: mod.rs  rust_package.rs  virtual_package.rs
workspace/cli/: Cargo.toml
workspace/cli/src/: args.rs  cli.rs  mod.rs  packager.rs  validation.rs
workspace/common/: Cargo.toml
workspace/common/src/: build.rs  mod.rs  pkg_config.rs  pkg_config_verify.rs
workspace/debian/: Cargo.toml
workspace/debian/src/: autopkgtest.rs  autopkgtest_image.rs  debcrafter.rs  execute.rs  lintian.rs  mod.rs  piuparts.rs  sbuild.rs  sbuild_create_chroot.rs
workspace/packager_deb/: Cargo.toml
workspace/packager_deb/src/: .sbuildrc  build_pipeline.rs  deb_command_handler.rs  distribution.rs  entry.rs  handler.rs  mod.rs  pkg_config.rs  sbuild.rs  sbuild_args.rs  sbuild_helper.rs  sbuild_packager.rs  sbuild_pipelines.rs  utils.rs  validation.rs
workspace/packager_deb/src/configs/: autopkg_version.rs  autopkgtest_version.rs  mod.rs  pkg_config.rs  pkg_config_verify.rs  sbuild_version.rs
workspace/packager_deb/src/installers/: command_builder.rs  dotnet_installer.rs  empty_installer.rs  go_installer.rs  java_installer.rs  language_installer.rs  mod.rs  nim_installer.rs  node_installer.rs  rust_installer.rs
workspace/packager_deb/src/misc/: build_pipeline.rs  distribution.rs  mod.rs  sbuild_pipelines.rs  utils.rs  validation.rs
workspace/packager_deb/src/recipes/: go_installer.sh  java_installer.sh  rust_installer.sh  yarn_installer.sh
workspace/packager_deb/src/steps/: create_debian_dir.rs  create_empty_tar.rs  dowload_git.rs  download_source.rs  extract_source.rs  mod.rs  package_dir_setup.rs  patch_source.rs  setup_sbuild.rs  verify_hash.rs
workspace/packager_deb/src/tools/: autopkgtest_tool.rs  lintian_tool.rs  mod.rs  piuparts_tool.rs  sbuild_tool.rs  tool_runner.rs
workspace/pkg-builder/src/: build.rs
workspace/pkg_builder/: Cargo.toml
workspace/pkg_builder/bin_dependencies/: .crates.toml  debcrafter_2711b53  debcrafter_8189263
workspace/pkg_builder/src/: build.rs  dependencies.toml  main.rs
workspace/types/: Cargo.toml
workspace/types/src/: build.rs  config.rs  debian.rs  defaults.rs  distribution.rs  mod.rs  pkg_config.rs  url.rs  version.rs
(+173 files in other folders)
