[package]
name = "pkg-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tempfile = "3.1"
log = "0.4"
env_logger = "0.9"
httpmock = "0.7.0"
git2 = "0.13"
cargo_metadata = "0.14"