[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "cli"
path = "src/mod.rs"  

[dependencies]
common = { path = "../common" }
build = { path = "../build" }
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6.12"
env_logger = "0.11.3"
log = "0.4"
cargo_metadata = "0.18"
regex = "1.10.4"
