[package]
name = "cli"
version = "0.3.0"
edition = "2024"

[lib]
name = "cli"
path = "src/mod.rs"  

[dependencies]
types = { path = "../types" }
packager_deb = { path = "../packager_deb" }
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4"
cargo_metadata = "0.18"
regex = "1.10.4"
thiserror = "1.0"
