[package]
name = "packager_deb"
version = "0.1.0"
edition = "2021"

[lib]
name = "packager_deb"
path = "src/mod.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debian = { workspace = true }
types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
shellexpand = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
filetime = { workspace = true }
cargo_metadata = { workspace = true }


[dev-dependencies]
toml = { workspace = true }
httpmock = { workspace = true }
env_logger = { workspace = true }
